# django-simple-certmanager

./: .bumpversion.cfg  .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTORS.md  README.rst  default.conf  docker-compose.yml  generate_certificates.sh  mtls_server.sh  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  code_quality.yml
certificates/: README.md  ca-ext.ini
docker/certificates/: README.md
docker/nginx/: default.conf
docs/: CHANGELOG.rst  commands.rst  conf.py  index.rst  models.rst  quickstart.rst  upload_csr.rst
simple_certmanager/: __init__.py  admin.py  constants.py  csr_generation.py  forms.py  mixins.py  models.py  mtls.py  utils.py  validators.py
simple_certmanager/locale/nl/LC_MESSAGES/: django.mo  django.po
simple_certmanager/management/commands/: cert_check_mtls.py  dump_certs.py
simple_certmanager/migrations/: 0001_initial.py  0002_alter_certificate_private_key_and_more.py  0003_signingrequest.py  0003_signingrequest_and_more.py  0003_signingrequest_certificate_signing_request.py
simple_certmanager/templates/admin/simple_certmanager/: change_list.html
simple_certmanager/test/: certificate_generation.py  fixtures.py
testapp/: settings.py  urls.py
tests/: conftest.py  test_admin.py  test_admin_csr.py  test_admin_views.py  test_certificates.py  test_commands.py  test_csr.py  test_utils.py
tests/data/: README.md  csr.pem  invalid_csr.pem  test.certificate  test.key  valid_csr.pem
