# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = django-simple-certmanager
version = 1.4.1
description = Manage TLS certificates and keys in the Django admin
long_description = file: README.rst
url = https://github.com/maykinmedia/django-simple-certmanager
project_urls =
    Documentation = http://django-simple-certmanager.readthedocs.io/en/latest/
    Changelog = https://github.com/maykinmedia/django-simple-certmanager/blob/main/docs/CHANGELOG.rst
    Bug Tracker = https://github.com/maykinmedia/django-simple-certmanager/issues
    Source Code = https://github.com/maykinmedia/django-simple-certmanager
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = certificate
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    django >= 3.2
    django-privates >= 1.5
    cryptography >= 35.0.0
    certifi
tests_require =
    pytest
    pytest-django
    pyquery
    tox
    isort
    black
    flake8
    freezegun

[options.packages.find]
include =
    simple_certmanager
    simple_certmanager.*

[options.extras_require]
testutils =
    factory-boy
tests =
    pytest
    pytest-django
    pyquery
    tox
    isort
    black
    flake8
    freezegun
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bump2version

# 3rd party configuration

[aliases]
test=pytest

[isort]
profile = black
combine_as_imports = true
known_django=django
known_first_party=simple_certmanager
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip = env,.tox,.history,.eggs

[tool:pytest]
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings

[pep8]
[flake8]
max-line-length=88
exclude=env,.tox,doc
ignore=E203,W503
